--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="portfolio-card">
                             <div class="portfolio-image">
                                 <!-- Replace portfolio-placeholder.jpg with your portfolio image URL or local file -->
-                                <img id="homePortfolioImg" src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/484ea3fba6372d3e47accf703238ae2c~tplv-tiktokx-cropcenter:1080:1080.jpeg?dr=14579&refresh_token=99d4cff5&x-expires=1763654400&x-signature=ruFJ%2BbBnrOA7LIvJ1pt6sPALnO8%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=maliva" alt="Cornelius Nyaga — C.E.O PIXEL & CODE">
+                                <img id="homePortfolioImg" src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/484ea3fba6372d3e47accf703238ae2c~tplv-tiktokx-cropcenter:1080:1080.jpeg?dr=14579&refresh_token=4db3f26a&x-expires=1764417600&x-signature=kGuzIaPi%2Fgk0ymp4JWDizY%2B0Fis%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=maliva" alt="Cornelius Nyaga — C.E.O PIXEL & CODE">
                             </div>
                             <div class="portfolio-caption">
                                 <div class="profile-role">C.E.O &nbsp;PIXEL &amp; CODE</div>
@@ -1129,3 +1129,4 @@
     </script>
     </body>
 </html>
+
