--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="portfolio-card">
                             <div class="portfolio-image">
                                 <!-- Replace portfolio-placeholder.jpg with your portfolio image URL or local file -->
-                                <img id="homePortfolioImg" src="https://photos.app.goo.gl/i4gG9GYFnYyqfe6j7" alt="Cornelius Nyaga — C.E.O PIXEL & CODE">
+                                <img id="homePortfolioImg" src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/484ea3fba6372d3e47accf703238ae2c~tplv-tiktokx-cropcenter:1080:1080.jpeg?dr=14579&refresh_token=e69edc2f&x-expires=1765227600&x-signature=I9zy7lFFZafRQWHo3i%2FvykNYSps%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=maliva" alt="Cornelius Nyaga — C.E.O PIXEL & CODE">
                             </div>
                             <div class="portfolio-caption">
                                 <div class="profile-role">C.E.O &nbsp;PIXEL &amp; CODE</div>
@@ -1129,4 +1129,5 @@
     </script>
     </body>
 </html>
+
 
