--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6746711109421342"
-     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-6746711109421342">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cornelius Nyaga | Cybersecurity Specialist & Creative Technologist</title>
@@ -1131,6 +1130,7 @@
     </script>
     </body>
 </html>
+
 
 
 
