Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta name="google-adsense-account" content="ca-pub-6746711109421342">
+    <meta name="google-adsense-account" content="ca-pub-6746711109421342">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cornelius Nyaga | Cybersecurity Specialist & Creative Technologist</title>
@@ -1130,6 +1131,7 @@
     </script>
     </body>
 </html>
+
 
 
 
